XML 8.9.20 päivitys osa 2/2 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.9.20.

--- a/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
@@ -25,7 +25,6 @@
   <string name="action_item_add_to_new_playlist">Uusi</string>
   <string name="action_item_delete">Poista</string>
   <string name="action_item_download">Lataa</string>
-  <string name="action_item_download_all_cloud">Lataa kaikki kappaleet</string>
   <string name="action_item_favorite">Lisää suosikiksi</string>
   <string name="action_item_hide">Piilota</string>
   <string name="action_item_hifi">Kuulokkeet &amp; äänitehosteet</string>
@@ -70,13 +69,6 @@
   <string name="artist_is_empty">Artistin nimi ei voi olla tyhjä.</string>
   <string name="artist_name">Artisti</string>
   <string name="artist_news">Uutiset</string>
-  <string name="asset_sync_alert_not_now">Ei nyt</string>
-  <string name="asset_sync_network_data_alert_message">Käyttämällä mobiilidataa varmuuskopiointiin saattaa lisätä mobiilidatamaksuja. Varmuuskopioidaanko siitä huolimatta?</string>
-  <string name="asset_sync_network_data_alert_title">Käytät mobiilidataa</string>
-  <string name="asset_sync_network_unavailable_alert_message">Varmuuskopioi kappaleita yhdistämällä internetiin</string>
-  <string name="asset_sync_network_unavailable_alert_title">Verkkoon yhdistäminen epäonnistui</string>
-  <string name="asset_sync_power_alert_message">Varmuuskopioi kappaleita yhdistämällä laturi.</string>
-  <string name="asset_sync_power_alert_title">Akku vähissä</string>
   <string name="audio_picker_title">Valitse kappale</string>
   <string name="auto_update">Päivitä automaattisesti</string>
   <string name="auto_update_tip">Voit päivittää järjestelmäsovelluksia käyttäen mobiilidataa. Tämä saattaa lisätä lisäkustannuksia.</string>
@@ -84,10 +76,6 @@
   <string name="avoid_to_use_traffic_summary">Älä käytä mobiilidata-yhteyttä musiikin suoratoistoon</string>
   <string name="avoid_to_use_traffic_title">Näytä ponnahdusikkuna, kun käytät mobiilidataa kappaleiden soittamiseen</string>
   <string name="back_confirm">Siirrä sovellus taustalle napauttamalla uudelleen</string>
-  <string name="backup_complete">Kaikki kappaleet on varmuuskopioitu Mi Pilveen</string>
-  <string name="backup_empty_button">Valitse 0 kappaletta</string>
-  <string name="backup_immediate">Varmuuskopioi</string>
-  <string name="backup_song_title">Valitse varmuuskopioitavat kappaleet</string>
   <string name="bluetooth_device">Bluetooth äänilaite</string>
   <string name="browser_error">Toistaiseksi ei käytettävissä, yritä myöhemmin uudelleen</string>
   <string name="buffering">Puskuroidaan…</string>
@@ -105,20 +93,6 @@
   <string name="choose_stream_quality">Valitse suoratoiston laatu</string>
   <string name="click_to_shuffle">Sekoita soittolista koskettamalla</string>
   <string name="close_music_time">"Aikaa jäljellä: "</string>
-  <string name="cloud_empty_local_empty_button">Laitteessa ei ole kappaleita</string>
-  <string name="cloud_empty_message">Mi Pilvessä ei ole kappaleita</string>
-  <string name="cloud_empty_summary">Varmuuskopioi kappaleet Mi Pilveen, jotta voit käyttää niitä toisessa laitteessa</string>
-  <string name="cloud_enable">Synkronoi musiikki Mi Pilveen</string>
-  <string name="cloud_loading_message">Etsitään kappaleita...</string>
-  <string name="cloud_music">Pilven Musiikki</string>
-  <string name="cloud_settings">Synkronointiasetukset</string>
-  <string name="cloud_state_cloud_space_full">Mi Pilven tallennustilaa ei ole tarpeeksi, varmuuskopiointi pysäytetty</string>
-  <string name="cloud_state_low_power">Jatka varmuuskopiointia yhdistämällä laturi</string>
-  <string name="cloud_state_network_data">Wi-Fi-verkkoja ei löytynyt, varmuuskopiointi pysäytettiin</string>
-  <string name="cloud_state_network_unavailable">Verkkoon yhdistäminen epäonnistui, varmuuskopiointi pysäytetty</string>
-  <string name="cloud_state_storage_full">Puhelimen tallennustilaa ei ole tarpeeksi, varmuuskopiointi pysäytetty</string>
-  <string name="cloud_welcome_message">Varmuuskopioi kappaleet</string>
-  <string name="cloud_welcome_summary">Varmuuskopioi kappaleet Mi Pilveen ja kuuntele niitä muilla laitteilla</string>
   <string name="comment_format" formatted="false">%s: %s</string>
   <string name="common_google_play_services_enable_button">Ota käyttöön</string>
   <string name="common_google_play_services_enable_text">%1$s ei tule toimimaan ellet ota Google Play palveluita käyttöön.</string>
@@ -142,7 +116,6 @@
   <string name="confirm_exit">Tallennetaanko muutokset?</string>
   <string name="connect_now">Yhdistä</string>
   <string name="connecting_apk">Yhdistetään…</string>
-  <string name="continue_backup">Jatka</string>
   <string name="count_format">%2$1.1fK</string>
   <string name="cp_info_first">Musiikin online suoratoistopalvelun pääosin tarjoaa Ultimate Oy.</string>
   <string name="create_order_fail">Tilausta ei voitu luoda, yritä uudelleen.</string>
@@ -217,9 +190,6 @@
   <string name="download_auto_message">Suosikiksi laittamasi kappaleet ladataan automaattisesti, kun olet yhteydessä Wi-Fi-verkkoon. Voit vaihtaa tätä Asetuksissa.</string>
   <string name="download_auto_when_free_network">Käytä vain Wi-Fi-verkkoa</string>
   <string name="download_auto_when_free_network_summary">Suosikeiksi lisättyjen kappaleiden lisäasetukset</string>
-  <string name="download_cloud_error_not_auth">Kirjaudu Mi Tiliin ja yritä uudelleen.</string>
-  <string name="download_cloud_error_retryable">Mi Pilven palvelinvirhe, yritä myöhemmin uudelleen.</string>
-  <string name="download_cloud_error_unknow">Yhdistäminen Mi Pilveen epäonnistui</string>
   <string name="download_complete">Lataus valmis</string>
   <string name="download_complete_btn">Asennettu…</string>
   <string name="download_complete_start_install">Asennetaan…</string>
@@ -302,10 +272,6 @@
   <string name="eq_preset_select">Valitse esiasetus</string>
   <string name="eq_rock">Rock</string>
   <string name="equalizer">Taajuuskorjain</string>
-  <string name="error_forbidden">Tilisi ongelmien takia synkronointi on otettu pois käytöstä.</string>
-  <string name="error_not_acceptable">Synkronointi ei ole käytössä.</string>
-  <string name="error_title">Mi Tiliin ei voi synkronoida</string>
-  <string name="error_unauthorized">Liian monen kirjautumisyrityksen takia synkronointi on otettu pois käytöstä.</string>
   <string name="exo_controls_fastforward_description">Kelaa eteenpäin</string>
   <string name="exo_controls_fullscreen_description">Kokonäyttötila</string>
   <string name="exo_controls_next_description">Seuraava raita</string>
@@ -336,6 +302,7 @@
   <string name="exo_track_surround_5_point_1">5.1 surround-ääni</string>
   <string name="exo_track_surround_7_point_1">7.1 surround-ääni</string>
   <string name="exo_track_unknown">Tuntematon</string>
+  <string name="expand_button_title">Lisäasetukset</string>
   <string name="expired">Vanhentunut</string>
   <string name="facebook_not_installed">Asenna Facebook ensin.</string>
   <string name="fail_to_fetch_payment_page_url">Maksutietoja ei saatu</string>
@@ -368,35 +335,6 @@
   <string name="format_not_support">Tämä tiedostomuoto ei ole tuettu.</string>
   <string name="format_unsupported_or_corrupted">Tämä tiedostomuoto ei ole tuettu tai tiedosto on korruptoitunut</string>
   <string name="fragment_title_artist_album">Albumit</string>
-  <string name="garbage_cleanup">Puhdistaja</string>
-  <string name="global_search_app_name">Musiikki</string>
-  <string name="global_search_description_entry">Nauti musiikista</string>
-  <string name="global_search_description_hot">Päivitä viikottain</string>
-  <string name="global_search_description_radar">Tunnista hyvät kappaleet</string>
-  <string name="global_search_key_absolute">Puhdas musiikki;Pehmeä musiikki</string>
-  <string name="global_search_key_buddha">Buddhalainen musiikki</string>
-  <string name="global_search_key_cantonese">Kantonilainen soittolista</string>
-  <string name="global_search_key_child">Lastenlaulut</string>
-  <string name="global_search_key_classics">Klassinen soittolista</string>
-  <string name="global_search_key_entry">Musiikki;Laulu;Kappale</string>
-  <string name="global_search_key_fm">online fm</string>
-  <string name="global_search_key_hot">Kuumat kappaleet</string>
-  <string name="global_search_key_internet">Verkon soittolista</string>
-  <string name="global_search_key_movie">Elokuvien soittolista</string>
-  <string name="global_search_key_prenatal">Raskaudenaikainen musiikki</string>
-  <string name="global_search_key_radar">Tunnista musiikki</string>
-  <string name="global_search_title_absolute">Puhdas musiikki</string>
-  <string name="global_search_title_buddha">Buddhalainen musiikki</string>
-  <string name="global_search_title_cantonese">Kantonilainen soittolista</string>
-  <string name="global_search_title_child">Lastenlaulut</string>
-  <string name="global_search_title_classics">Klassinen soittolista</string>
-  <string name="global_search_title_entry">Musiikki</string>
-  <string name="global_search_title_fm">Online FM</string>
-  <string name="global_search_title_hot">Kuumien kappaleiden lista</string>
-  <string name="global_search_title_internet">Verkon soittolista</string>
-  <string name="global_search_title_movie">Elokuvien soittolista</string>
-  <string name="global_search_title_prenatal">Raskaudenaikainen musiikki</string>
-  <string name="global_search_title_radar">Musiikin tunnistus</string>
   <string name="handle_later">Ei nyt</string>
   <string name="hd_quality_audio">HD-äänenlaatu</string>
   <string name="headset_and_audio_effect_category">Kuulokkeet &amp; äänitehosteet</string>
@@ -476,7 +414,6 @@
   <string name="lyric_label">Sanoitukset</string>
   <string name="lyric_open_other_connect">Lataa sanoitukset mobiilidatalla</string>
   <string name="lyric_setting">Sanoitusten asetukset</string>
-  <string name="manager_cloud_space">Hallitse Mi Pilven tallennustilaa</string>
   <string name="max_sleep_time">%d</string>
   <string name="menu_title_pause_all">Pysäytä kaikki</string>
   <string name="menu_title_resume_all">Aloita kaikki</string>
@@ -627,22 +564,13 @@
   <string name="priority_storage">Käytä ulkoista SD-korttia</string>
   <string name="priority_storage_summary">Lataa automaattisesti ulkoiselle SD-kortille jos käytettävissä</string>
   <string name="privacy_policy">Tietosuojakäytäntö</string>
-  <string name="pro_member">PRO-Jäsen</string>
+  <string name="pro_member">PRO-jäsen</string>
   <string name="project_device">Mi Puhelin</string>
   <string name="prompt_grant_write_settings_permission">Salli järjestelmän asetuksien muuttaminen</string>
   <string name="pulluprefreshrecyclerview_loading_error">Lataaminen epäonnistui</string>
   <string name="pulluprefreshrecyclerview_loading_finished">Lataaminen valmis</string>
   <string name="pulluprefreshrecyclerview_loading_running">Ladataan…</string>
   <string name="queue_is_empty">Toistojono on tyhjä.</string>
-  <string name="radar">ACRCloud</string>
-  <string name="radar_click_to_retry">Yritä uudelleen painamalla</string>
-  <string name="radar_fail">Ei Tuloksia</string>
-  <string name="radar_fail_by_noise">Saattaa olla liian meluisaa</string>
-  <string name="radar_listening_state">Tunnistus on käynnissä</string>
-  <string name="radar_possible_result">Mahdolliset kappaleet</string>
-  <string name="radar_retry">Yritä uudelleen</string>
-  <string name="radar_searching_state">Haku on käynnissä</string>
-  <string name="radar_support_by">Tarjoaja ACRCloud</string>
   <string name="recently_played">Viimeksi soitetut</string>
   <string name="recently_played_songs">Viimeksi</string>
   <string name="recommended_file_size_download_in_mobile">Käytetäänkö %s mobiilidataa tämän tiedoston lataamiseen?</string>
@@ -679,7 +607,6 @@ Ole onnellinen"</string>
   <string name="search_menu_title">Haku</string>
   <string name="search_songs_count">Kappaleet: %d</string>
   <string name="search_title">Haku</string>
-  <string name="second_symbol">s</string>
   <string name="select">Valitse</string>
   <string name="select_all">Valitse kaikki</string>
   <string name="select_desc_sub">Voit valita enintään 3 kieltä</string>
@@ -700,21 +627,11 @@ Ole onnellinen"</string>
   <string name="set_ringtones_successful">%s asetettiin soittoääneksi</string>
   <string name="setting_feature_setting">Ominaisuuksien Asetukset</string>
   <string name="settings">Asetukset</string>
-  <string name="settings_search_key_desktop_lyric">zhuomiangeci;音乐;yinyue;歌曲;gequ</string>
-  <string name="settings_search_key_download_quality">xiazaipinzhixuanze;音乐;yinyue;歌曲;gequ</string>
-  <string name="settings_search_key_download_when_favorite">danqushoucangjixiazai;音乐;yinyue;歌曲;gequ</string>
-  <string name="settings_search_key_main">Musiikki;Kappaleet;Kappale</string>
   <string name="settings_search_key_notification">Musiikin ilmoitukset;Musiikki;Ilmoitukset;kappaleet</string>
-  <string name="settings_search_key_vip_service">Premium kappaleet;VIP;Kappalepaketti;Premium Kappalepaketti;Jäsen;Tilaus;Musiikki;Kappaleet</string>
   <string name="settings_search_path_advance">Järjestelmäsovellukset/Musiikki/Palvelu ja asetukset/Lisäasetukset</string>
   <string name="settings_search_path_main">Järjestelmäsovellukset/Musiikki</string>
   <string name="settings_search_path_normal">Järjestelmäsovellukset/Musiikki/Palvelu ja asetukset</string>
-  <string name="settings_search_title_desktop_lyric">Aloitusnäytön lyriikat</string>
-  <string name="settings_search_title_download_quality">Latauksen laatu</string>
-  <string name="settings_search_title_download_when_favorite">Lataa suosikit</string>
-  <string name="settings_search_title_main">Musiikki</string>
   <string name="settings_search_title_notification">Musiikin ilmoitukset</string>
-  <string name="settings_search_title_vip_service">Premium kappaleet</string>
   <string name="share_append_text">MIUI:sta</string>
   <string name="share_chooser_title">Jaa käyttäen</string>
   <string name="share_description">Mi Musiikista</string>
@@ -735,7 +652,7 @@ Ole onnellinen"</string>
   <string name="sleep_mode_canceled">Nukkuma-tila poistettu käytöstä</string>
   <string name="sleep_mode_summary">Lopeta soitin tietyn ajan jälkeen</string>
   <string name="sleep_mode_title">Nukkuma-ajastin</string>
-  <string name="sliding_pro_center">PRO Keskus</string>
+  <string name="sliding_pro_center">PRO-keskus</string>
   <string name="song_exist_in_playlist">Tämä kappale on jo jonossa</string>
   <string name="song_info">Kappaleen tiedot</string>
   <string name="song_is_empty">Kappaleen nimi ei voi olla tyhjä.</string>
@@ -749,13 +666,12 @@ Ole onnellinen"</string>
   <string name="start_to_check_new_version">Tarkistetaan päivityksiä…</string>
   <string name="start_to_download">Ladataan…</string>
   <string name="start_to_play">Toista</string>
-  <string name="stop">Lopeta</string>
-  <string name="stop_backup">Lopeta</string>
   <string name="storage_internal">Sisäinen tallennustila</string>
   <string name="storage_sd_card">SD-kortti</string>
   <string name="storage_usb">USB tallennustila</string>
   <string name="stream_quality">Suoratoiston laatu</string>
   <string name="streamloadingtext">Yhdistetään kohteeseen %s</string>
+  <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
   <string name="tab_album">Albumit</string>
   <string name="tab_album_list">Albumit</string>
   <string name="tab_artist">Artistit</string>
@@ -781,7 +697,6 @@ Ole onnellinen"</string>
   <string name="talkback_nowplaying_circle">Toistoympyrä</string>
   <string name="talkback_play">Toista / Pysäytä</string>
   <string name="talkback_pre">Edellinen kappale</string>
-  <string name="talkback_radar">Musiikintunnistus</string>
   <string name="talkback_search">Haku</string>
   <string name="talkback_show_navigation_draw">Näytä laatikko</string>
   <string name="terms_of_service">Palveluehdot</string>
@@ -813,6 +728,8 @@ Ole onnellinen"</string>
   <string name="upgrade_music_message">Paketti on valmis. Päivitä käynnistämällä uudelleen.</string>
   <string name="upgrading_in_backstage">Päivitetään taustalla…</string>
   <string name="user_agreement">Käyttöehdot</string>
+  <string name="v7_preference_off">POIS KÄYTÖSTÄ</string>
+  <string name="v7_preference_on">KÄYTÖSSÄ</string>
   <string name="version_info">Versio</string>
   <string name="video_play_cellular">Laitteesi ei ole yhteydessä Wi-Fi-verkkoon. Käytetäänkö mobiilidataa?</string>
   <string name="video_replay_btn">Toista uudelleen</string>
